--- a/Código/Centralidad género.ipynb
+++ b/Código/Centralidad género.ipynb
@@ -16,7 +16,11 @@
     "import geopandas as gpd\n",
     "\n",
     "from mpl_toolkits.basemap import Basemap\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "warnings.simplefilter('ignore')"
    ]
   },
   {
@@ -37,20 +41,7 @@
    "execution_count": 3,
    "id": "23df81f6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\benga\\AppData\\Local\\Temp\\ipykernel_6320\\3305060254.py:10: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  pos['location']=pos[['latitud','longitud']].apply(tuple,axis=1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mexico_city_map = Basemap(llcrnrlon=-99.4, llcrnrlat=19.1, urcrnrlon=-98.8, urcrnrlat=19.7, resolution='l', epsg=4326)\n",
     "# Cargamos las coordenadas de las estaciones \n",
@@ -145,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "9329f2fb",
    "metadata": {},
    "outputs": [],
@@ -163,8 +154,213 @@
     "Etiquetas = pd.read_csv(\"https://raw.githubusercontent.com/JobGV/ECOBICI/main/Dictionary/Estaciones.csv\")\n",
     "base = base.merge(Etiquetas,how='left',on='id')\n",
     "base['nombre'] = base['id'].astype(str)+\". \"+base['Estación']+\" (\"+round(base['value'],4).astype(str)+\")\"\n",
+    "\n",
     "#ruta=\"C:\\\\Users\\\\benga\\\\OneDrive - El Colegio de México A.C\\\\Proyecto\\\\Redes\\\\Resultados\\\\Centralidades_Consolidado\"+TipoS\n",
     "#base.to_csv(ruta,index=False)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8ef8413e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Estación</th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>id</th>\n",
+       "      <th>mesure</th>\n",
+       "      <th>nombre</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Río Sena - Río Balsas</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>1</td>\n",
+       "      <td>in_deg_cent</td>\n",
+       "      <td>1. Río Sena - Río Balsas (0.05)</td>\n",
+       "      <td>0.05000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Guillermo Prieto - Joaquín Velázquez de León</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>111</td>\n",
+       "      <td>in_deg_cent</td>\n",
+       "      <td>111. Guillermo Prieto - Joaquín Velázquez de L...</td>\n",
+       "      <td>0.05000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Georgia - Pensilvania</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>327</td>\n",
+       "      <td>in_deg_cent</td>\n",
+       "      <td>327. Georgia - Pensilvania (0.05)</td>\n",
+       "      <td>0.05000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Álvaro Obregón - Morelia</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>135</td>\n",
+       "      <td>in_deg_cent</td>\n",
+       "      <td>135. Álvaro Obregón - Morelia (0.05)</td>\n",
+       "      <td>0.05000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Gabino Barreda - Guillermo Prieto</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>183</td>\n",
+       "      <td>in_deg_cent</td>\n",
+       "      <td>183. Gabino Barreda - Guillermo Prieto (0.05)</td>\n",
+       "      <td>0.05000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>876</th>\n",
+       "      <td>Guillermo Prieto - Joaquín Velázquez de León</td>\n",
+       "      <td>22</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>111</td>\n",
+       "      <td>between_cent</td>\n",
+       "      <td>111. Guillermo Prieto - Joaquín Velázquez de L...</td>\n",
+       "      <td>0.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>877</th>\n",
+       "      <td>Acapulco - Puebla</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>449</td>\n",
+       "      <td>between_cent</td>\n",
+       "      <td>449. Acapulco - Puebla (0.0)</td>\n",
+       "      <td>0.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>878</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>0</td>\n",
+       "      <td>average_clustering</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>879</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>0</td>\n",
+       "      <td>degree_assortativity</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.26968</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>880</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>0</td>\n",
+       "      <td>degree_pearson_corr</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.26968</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>881 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         Estación  Unnamed: 0  Year   id  \\\n",
+       "0                           Río Sena - Río Balsas           0  2021    1   \n",
+       "1    Guillermo Prieto - Joaquín Velázquez de León           1  2021  111   \n",
+       "2                           Georgia - Pensilvania           2  2021  327   \n",
+       "3                        Álvaro Obregón - Morelia           3  2021  135   \n",
+       "4               Gabino Barreda - Guillermo Prieto           4  2021  183   \n",
+       "..                                            ...         ...   ...  ...   \n",
+       "876  Guillermo Prieto - Joaquín Velázquez de León          22  2020  111   \n",
+       "877                             Acapulco - Puebla          23  2020  449   \n",
+       "878                                           NaN           0  2020    0   \n",
+       "879                                           NaN           1  2020    0   \n",
+       "880                                           NaN           2  2020    0   \n",
+       "\n",
+       "                   mesure                                             nombre  \\\n",
+       "0             in_deg_cent                    1. Río Sena - Río Balsas (0.05)   \n",
+       "1             in_deg_cent  111. Guillermo Prieto - Joaquín Velázquez de L...   \n",
+       "2             in_deg_cent                  327. Georgia - Pensilvania (0.05)   \n",
+       "3             in_deg_cent               135. Álvaro Obregón - Morelia (0.05)   \n",
+       "4             in_deg_cent      183. Gabino Barreda - Guillermo Prieto (0.05)   \n",
+       "..                    ...                                                ...   \n",
+       "876          between_cent  111. Guillermo Prieto - Joaquín Velázquez de L...   \n",
+       "877          between_cent                       449. Acapulco - Puebla (0.0)   \n",
+       "878    average_clustering                                                NaN   \n",
+       "879  degree_assortativity                                                NaN   \n",
+       "880   degree_pearson_corr                                                NaN   \n",
+       "\n",
+       "       value  \n",
+       "0    0.05000  \n",
+       "1    0.05000  \n",
+       "2    0.05000  \n",
+       "3    0.05000  \n",
+       "4    0.05000  \n",
+       "..       ...  \n",
+       "876  0.00000  \n",
+       "877  0.00000  \n",
+       "878  0.00000  \n",
+       "879  0.26968  \n",
+       "880  0.26968  \n",
+       "\n",
+       "[881 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base[base.columns.difference(['Unnamed:0'])]"
    ]
   }
  ],
