--- a/Código/Centralidad horario.ipynb
+++ b/Código/Centralidad horario.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f07924cc",
    "metadata": {},
    "outputs": [],
@@ -16,12 +16,15 @@
     "import geopandas as gpd\n",
     "\n",
     "from mpl_toolkits.basemap import Basemap\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "warnings.simplefilter('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f14068a0",
    "metadata": {},
    "outputs": [],
@@ -34,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fd29a423",
    "metadata": {},
    "outputs": [],
@@ -129,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "934eb55f",
    "metadata": {},
    "outputs": [],
@@ -149,6 +152,198 @@
     "base['nombre'] = base['id'].astype(str)+\". \"+base['Estación']+\" (\"+round(base['value'],4).astype(str)+\")\"\n",
     "#ruta=\"C:\\\\Users\\\\benga\\\\OneDrive - El Colegio de México A.C\\\\Proyecto\\\\Redes\\\\Resultados\\\\Centralidades_Consolidado\"+TipoS\n",
     "#base.to_csv(ruta,index=False)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ec36d4f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Estación</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>id</th>\n",
+       "      <th>mesure</th>\n",
+       "      <th>nombre</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Roma - Dinamarca</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>115</td>\n",
+       "      <td>in_deg_cent</td>\n",
+       "      <td>115. Roma - Dinamarca (0.0526)</td>\n",
+       "      <td>0.052632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Tonalá - Guanajuato</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>139</td>\n",
+       "      <td>in_deg_cent</td>\n",
+       "      <td>139. Tonalá - Guanajuato (0.0526)</td>\n",
+       "      <td>0.052632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Acapulco - Puebla</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>449</td>\n",
+       "      <td>in_deg_cent</td>\n",
+       "      <td>449. Acapulco - Puebla (0.0526)</td>\n",
+       "      <td>0.052632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Mayorazgo de Solís - Av. Popocatépetl (Eje 8)</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>426</td>\n",
+       "      <td>in_deg_cent</td>\n",
+       "      <td>426. Mayorazgo de Solís - Av. Popocatépetl (Ej...</td>\n",
+       "      <td>0.052632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Jesús García - Carlos J. Meneses</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>266</td>\n",
+       "      <td>in_deg_cent</td>\n",
+       "      <td>266. Jesús García - Carlos J. Meneses (0.0526)</td>\n",
+       "      <td>0.052632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>848</th>\n",
+       "      <td>Guillermo Prieto - Joaquín Velázquez de León</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>111</td>\n",
+       "      <td>between_cent</td>\n",
+       "      <td>111. Guillermo Prieto - Joaquín Velázquez de L...</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>849</th>\n",
+       "      <td>Acapulco - Puebla</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>449</td>\n",
+       "      <td>between_cent</td>\n",
+       "      <td>449. Acapulco - Puebla (0.0)</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>850</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>0</td>\n",
+       "      <td>average_clustering</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>851</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>0</td>\n",
+       "      <td>degree_assortativity</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.175589</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>852</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>0</td>\n",
+       "      <td>degree_pearson_corr</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.175589</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>853 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          Estación  Year   id  \\\n",
+       "0                                 Roma - Dinamarca  2021  115   \n",
+       "1                              Tonalá - Guanajuato  2021  139   \n",
+       "2                                Acapulco - Puebla  2021  449   \n",
+       "3    Mayorazgo de Solís - Av. Popocatépetl (Eje 8)  2021  426   \n",
+       "4                 Jesús García - Carlos J. Meneses  2021  266   \n",
+       "..                                             ...   ...  ...   \n",
+       "848   Guillermo Prieto - Joaquín Velázquez de León  2020  111   \n",
+       "849                              Acapulco - Puebla  2020  449   \n",
+       "850                                            NaN  2020    0   \n",
+       "851                                            NaN  2020    0   \n",
+       "852                                            NaN  2020    0   \n",
+       "\n",
+       "                   mesure                                             nombre  \\\n",
+       "0             in_deg_cent                     115. Roma - Dinamarca (0.0526)   \n",
+       "1             in_deg_cent                  139. Tonalá - Guanajuato (0.0526)   \n",
+       "2             in_deg_cent                    449. Acapulco - Puebla (0.0526)   \n",
+       "3             in_deg_cent  426. Mayorazgo de Solís - Av. Popocatépetl (Ej...   \n",
+       "4             in_deg_cent     266. Jesús García - Carlos J. Meneses (0.0526)   \n",
+       "..                    ...                                                ...   \n",
+       "848          between_cent  111. Guillermo Prieto - Joaquín Velázquez de L...   \n",
+       "849          between_cent                       449. Acapulco - Puebla (0.0)   \n",
+       "850    average_clustering                                                NaN   \n",
+       "851  degree_assortativity                                                NaN   \n",
+       "852   degree_pearson_corr                                                NaN   \n",
+       "\n",
+       "        value  \n",
+       "0    0.052632  \n",
+       "1    0.052632  \n",
+       "2    0.052632  \n",
+       "3    0.052632  \n",
+       "4    0.052632  \n",
+       "..        ...  \n",
+       "848  0.000000  \n",
+       "849  0.000000  \n",
+       "850  0.000000  \n",
+       "851  0.175589  \n",
+       "852  0.175589  \n",
+       "\n",
+       "[853 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base[base.columns.difference(['Unnamed: 0'])]"
    ]
   }
  ],
