--- a/Código/Centralidad red completa.ipynb
+++ b/Código/Centralidad red completa.ipynb
@@ -16,7 +16,11 @@
     "import geopandas as gpd\n",
     "\n",
     "from mpl_toolkits.basemap import Basemap\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "warnings.simplefilter('ignore')"
    ]
   },
   {
@@ -24,20 +28,7 @@
    "execution_count": 2,
    "id": "8e464448",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\benga\\AppData\\Local\\Temp\\ipykernel_14020\\3817131187.py:10: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  pos['location']=pos[['latitud','longitud']].apply(tuple,axis=1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mexico_city_map = Basemap(llcrnrlon=-99.4, llcrnrlat=19.1, urcrnrlon=-98.8, urcrnrlat=19.7, resolution='l', epsg=4326)\n",
     "# Cargamos las coordenadas de las estaciones \n",
@@ -122,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "cb033c65",
    "metadata": {},
    "outputs": [],
@@ -138,6 +129,148 @@
     "\n",
     "#ruta=\"C:\\\\Users\\\\benga\\\\OneDrive - El Colegio de México A.C\\\\Proyecto\\\\Redes\\\\Resultados\\\\Centralidades_Consolidado.csv\"\n",
     "#base.to_csv(ruta,index=False)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "73a33c93",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>id</th>\n",
+       "      <th>mesure</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>271</td>\n",
+       "      <td>in_deg_cent</td>\n",
+       "      <td>0.076923</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>1</td>\n",
+       "      <td>in_deg_cent</td>\n",
+       "      <td>0.060729</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>208</td>\n",
+       "      <td>in_deg_cent</td>\n",
+       "      <td>0.040486</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>111</td>\n",
+       "      <td>in_deg_cent</td>\n",
+       "      <td>0.036437</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>295</td>\n",
+       "      <td>in_deg_cent</td>\n",
+       "      <td>0.036437</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>798</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>230</td>\n",
+       "      <td>between_cent</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>799</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>238</td>\n",
+       "      <td>between_cent</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>800</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>0</td>\n",
+       "      <td>average_clustering</td>\n",
+       "      <td>0.096423</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>801</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>0</td>\n",
+       "      <td>degree_assortativity</td>\n",
+       "      <td>0.113400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>802</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>0</td>\n",
+       "      <td>degree_pearson_corr</td>\n",
+       "      <td>0.113400</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4015 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Year   id                mesure     value\n",
+       "0    2022  271           in_deg_cent  0.076923\n",
+       "1    2022    1           in_deg_cent  0.060729\n",
+       "2    2022  208           in_deg_cent  0.040486\n",
+       "3    2022  111           in_deg_cent  0.036437\n",
+       "4    2022  295           in_deg_cent  0.036437\n",
+       "..    ...  ...                   ...       ...\n",
+       "798  2021  230          between_cent  0.000000\n",
+       "799  2021  238          between_cent  0.000000\n",
+       "800  2021    0    average_clustering  0.096423\n",
+       "801  2021    0  degree_assortativity  0.113400\n",
+       "802  2021    0   degree_pearson_corr  0.113400\n",
+       "\n",
+       "[4015 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base[base.columns.difference(['Unnamed: 0'])]"
    ]
   }
  ],
